clang/test/BSC/Negative/OwnedStruct/destructor/invalid_destructor_param_num.cbs
// RUN: %clang_cc1 -verify %s

_Owned struct A {    
 ~A(A this, int x) { // expected-error {{destructor can only have one parameter}}
  }

};


_Owned struct B<T> {    
 ~B(int x,int y) { // expected-error {{the parameter of destructor must be 'B<T> this'}}
  }

};